# frit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.py  conanfile.txt  test.py
frit/: CMakeLists.txt
frit/cmake/: FritConfig.cmake.in
frit/include/public/: lexer.h
frit/src/: lexer.cpp
lib/: CMakeLists.txt
lib/cmake/: FritConfig.cmake.in
lib/include/: string_utils.h
lib/include/public/: lexer.h  node.h  parser.h  token.h
lib/src/: lexer.cpp  parser.cpp
src/: main.cpp
test/: CMakeLists.txt  assertions.h  dummy.cpp  lexer.test.cpp
